--- a/src/main/resources/com/example/proyecto/MainEstudianteView.fxml
+++ b/src/main/resources/com/example/proyecto/MainEstudianteView.fxml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.proyecto.MainDocenteViewController">
+            fx:controller="com.example.proyecto.MainEstudianteViewController">
 
     <!-- Menú Superior -->
     <top>
         <MenuBar>
             <menus>
                 <Menu text="Opciones">
-                    <MenuItem text="Gestión de Exámenes" onAction="#mostrarExamenes"/>
-                    <MenuItem text="Gestión de Preguntas" onAction="#mostrarPreguntas"/>
-                    <MenuItem text="Cerrar Sesión" onAction="#cerrarSesion"/>
+                    <MenuItem text="Gestión de Exámenes" />
+                    <MenuItem text="Gestión de Preguntas"/>
+                    <MenuItem text="Cerrar Sesión" />
                 </Menu>
             </menus>
         </MenuBar>
@@ -27,4 +30,3 @@
     </center>
 
 </BorderPane>
-
