Se crearon las carpetas dao y controller para un mejor orden en el código

--- a/src/main/resources/com/example/proyecto/MainEstudianteView.fxml
+++ b/src/main/resources/com/example/proyecto/MainEstudianteView.fxml
@@ -8,7 +8,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.proyecto.MainEstudianteViewController">
+            fx:controller="com.example.proyecto.controller.MainEstudianteViewController">
 
     <!-- Menú Superior -->
     <top>
