--- a/src/main/resources/com/example/proyecto/LoginView.fxml
+++ b/src/main/resources/com/example/proyecto/LoginView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.geometry.Insets?>
 
 <GridPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.proyecto.LoginViewController"
+          fx:controller="com.example.proyecto.controller.LoginViewController"
           alignment="CENTER" hgap="10" vgap="10">
 
     <padding>
