--- a/src/main/resources/com/example/proyecto/MainDocenteView.fxml
+++ b/src/main/resources/com/example/proyecto/MainDocenteView.fxml
@@ -5,7 +5,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.proyecto.MainDocenteViewController">
+            fx:controller="com.example.proyecto.controller.MainDocenteViewController">
 
     <!-- Menú Superior -->
     <top>
