--- a/src/main/resources/com/example/proyecto/PreguntaView.fxml
+++ b/src/main/resources/com/example/proyecto/PreguntaView.fxml
@@ -8,7 +8,7 @@
 
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.proyecto.PreguntaViewController"
+          fx:controller="com.example.proyecto.controller.PreguntaViewController"
           alignment="CENTER"
           hgap="10" vgap="10">
 
@@ -55,7 +55,6 @@
             <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
             <TableColumn fx:id="colTexto" text="Texto" prefWidth="200"/>
             <TableColumn fx:id="colTipo" text="Tipo" prefWidth="100"/>
-            <TableColumn fx:id="colBanco" text="ID Banco" prefWidth="80"/>
             <TableColumn fx:id="colTema" text="Tema Pregunta" prefWidth="150"/>
         </columns>
     </TableView>
