Se reorganizaron los archivos dao y los controller en las carpetas dao y controller, además se impementó en el LoginViewController el uso de las tablas de Docente y Estudiante para validación de los usuarios. En las  vistas de Docente y de Estudiante se están cargando sus datos automaticamente, directamente de la base de datos

--- a/src/main/resources/com/example/proyecto/MainDocenteView.fxml
+++ b/src/main/resources/com/example/proyecto/MainDocenteView.fxml
@@ -6,7 +6,6 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.proyecto.controller.MainDocenteViewController">
-
     <!-- Menú Superior -->
     <top>
         <MenuBar>
@@ -23,6 +22,11 @@
     <!-- Centro vacío (se irá cambiando dinámicamente) -->
     <center>
         <BorderPane fx:id="rootPane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+            <top>
+                <VBox spacing="10" alignment="CENTER_LEFT" style="-fx-padding: 15px;">
+                    <Label fx:id="lblNombreDocente" text="Bienvenido, Docente" />
+                </VBox>
+            </top>
         </BorderPane>
     </center>
 
