--- a/src/main/resources/com/example/proyecto/ExamenView.fxml
+++ b/src/main/resources/com/example/proyecto/ExamenView.fxml
@@ -3,8 +3,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.proyecto.controller.ExamenViewController" alignment="center" hgap="10" vgap="10">
+<GridPane xmlns="http://javafx.com/javafx"
+          xmlns:fx="http://javafx.com/fxml"
+          fx:controller="com.example.proyecto.controller.ExamenViewController"
+          alignment="CENTER"
+          hgap="10" vgap="10">
 
     <Label text="Gestión de Exámenes" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
