--- a/src/main/resources/com/example/proyecto/ExamenView.fxml
+++ b/src/main/resources/com/example/proyecto/ExamenView.fxml
@@ -11,7 +11,7 @@
 
     <Label text="Gestión de Exámenes" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
 
-    <TableView fx:id="tablaExamenes" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="5">
+    <TableView fx:id="tablaExamenes" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="6">
         <columns>
             <TableColumn text="ID" fx:id="colId"/>
             <TableColumn text="Nombre" fx:id="colNombre"/>
@@ -20,6 +20,7 @@
             <TableColumn text="Fecha Fin" fx:id="colFechaFin"/>
             <TableColumn text="Tiempo Límite" fx:id="colTiempoLimite"/>
             <TableColumn text="ID Docente" fx:id="colIdDocente"/>
+            <TableColumn text="Grupo" fx:id="colGrupo"/>
         </columns>
     </TableView>
 
@@ -33,10 +34,7 @@
     <TextField fx:id="txtIdDocente" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
 
     <Label text="Grupo:" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
-    <ComboBox fx:id="cbGrupo"
-              GridPane.columnIndex="1"
-              GridPane.rowIndex="5"
-              prefWidth="200"/>
+    <ComboBox fx:id="cbGrupo" GridPane.columnIndex="1" GridPane.rowIndex="5" prefWidth="200"/>
 
     <Label text="Fecha Inicio:" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
     <DatePicker fx:id="dpFechaInicio" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
@@ -56,17 +54,13 @@
     <Label text="Preguntas Asignadas" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
     <ListView fx:id="listPreguntasAsignadas" GridPane.columnIndex="1" GridPane.rowIndex="8" GridPane.columnSpan="3"/>
 
-    <Button text="Asignar Pregunta Seleccionada"
-            fx:id="btnAsignarPregunta"
+    <Button text="Asignar Pregunta Seleccionada" fx:id="btnAsignarPregunta"
             onAction="#asignarPregunta"
-            GridPane.columnIndex="1"
-            GridPane.rowIndex="9"/>
+            GridPane.columnIndex="1" GridPane.rowIndex="9"/>
 
-    <Button text="Eliminar Pregunta Asignada"
-            fx:id="btnEliminarPreguntaAsignada"
+    <Button text="Eliminar Pregunta Asignada" fx:id="btnEliminarPreguntaAsignada"
             onAction="#eliminarPreguntaAsignada"
-            GridPane.columnIndex="2"
-            GridPane.rowIndex="9"/>
+            GridPane.columnIndex="2" GridPane.rowIndex="9"/>
 
     <HBox spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="6">
         <Button text="Agregar" fx:id="btnAgregar" onAction="#agregarExamen"/>
@@ -79,5 +73,4 @@
                GridPane.columnIndex="0"
                GridPane.rowIndex="10"
                GridPane.columnSpan="4"/>
-
 </GridPane>
