Se volvieron a agregar cambios acercade Tema en el examen que por alguna razón no se encontraban en esta versión

--- a/src/main/resources/com/example/proyecto/ExamenView.fxml
+++ b/src/main/resources/com/example/proyecto/ExamenView.fxml
@@ -20,6 +20,7 @@
             <TableColumn text="Fecha Fin" fx:id="colFechaFin"/>
             <TableColumn text="Tiempo Límite" fx:id="colTiempoLimite"/>
             <TableColumn text="ID Docente" fx:id="colIdDocente"/>
+            <TableColumn text="Tema" fx:id="colTema"/>
             <TableColumn text="Grupo" fx:id="colGrupo"/>
         </columns>
     </TableView>
